[package]
name = "twitter_video_dl"
version = "1.1.0"
authors = ["nima <neemaiox@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.11", features = ["auto-send", "macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1.8", features = ["full"] }
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
lazy_static = "1.4.0"
regex = "1"
rand = "0.8.5"
serde_json = "1.0"
chrono = "0.4.23"
