[package]
name = "twitter_video_dl"
version = "1.5.0"
authors = ["nima <neemaiox@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["auto-send", "macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version = "1.28", features = ["full"] }
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
lazy_static = "1.4.0"
regex = "1"
rand = "0.8.5"
serde_json = "1.0"
redis = "0.23"
chrono = "0.4"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
# codegen-units ignored with lto=true
